--- a/Project1/Project1_top.qsf
+++ b/Project1/Project1_top.qsf
@@ -76,16 +76,16 @@ set_location_assignment PIN_B12 -to switches[5]
 set_location_assignment PIN_A12 -to switches[4]
 set_global_assignment -name VERILOG_FILE SevenSegment.v
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
-set_location_assignment PIN_A8 -to LEDs[9]
-set_location_assignment PIN_A9 -to LEDs[8]
-set_location_assignment PIN_A10 -to LEDs[7]
-set_location_assignment PIN_B10 -to LEDs[6]
-set_location_assignment PIN_A11 -to LEDs[5]
-set_location_assignment PIN_D14 -to LEDs[4]
-set_location_assignment PIN_D13 -to LEDs[3]
-set_location_assignment PIN_B11 -to LEDs[2]
-set_location_assignment PIN_E14 -to LEDs[1]
-set_location_assignment PIN_C13 -to LEDs[0]
+set_location_assignment PIN_B11 -to LEDs[9]
+set_location_assignment PIN_A11 -to LEDs[8]
+set_location_assignment PIN_D14 -to LEDs[7]
+set_location_assignment PIN_E14 -to LEDs[6]
+set_location_assignment PIN_C13 -to LEDs[5]
+set_location_assignment PIN_D13 -to LEDs[4]
+set_location_assignment PIN_B10 -to LEDs[3]
+set_location_assignment PIN_A10 -to LEDs[2]
+set_location_assignment PIN_A9 -to LEDs[1]
+set_location_assignment PIN_A8 -to LEDs[0]
 set_location_assignment PIN_C14 -to Hex1In[0]
 set_location_assignment PIN_C17 -to Hex1In[6]
 set_location_assignment PIN_D17 -to Hex1In[5]
@@ -102,4 +102,21 @@ set_location_assignment PIN_E18 -to Hex2In[2]
 set_location_assignment PIN_D18 -to Hex2In[1]
 set_global_assignment -name VERILOG_FILE Arithmetic.v
 set_global_assignment -name VERILOG_FILE output_files/Logical.v
+set_global_assignment -name VERILOG_FILE Comparison.v
+set_global_assignment -name VERILOG_FILE output_files/Multiplexer.v
+set_location_assignment PIN_P11 -to clock
+set_location_assignment PIN_B20 -to Hex3In[0]
+set_location_assignment PIN_A20 -to Hex3In[1]
+set_location_assignment PIN_B19 -to Hex3In[2]
+set_location_assignment PIN_A21 -to Hex3In[3]
+set_location_assignment PIN_B21 -to Hex3In[4]
+set_location_assignment PIN_C22 -to Hex3In[5]
+set_location_assignment PIN_B22 -to Hex3In[6]
+set_location_assignment PIN_F21 -to Hex4In[0]
+set_location_assignment PIN_E22 -to Hex4In[1]
+set_location_assignment PIN_E21 -to Hex4In[2]
+set_location_assignment PIN_C19 -to Hex4In[3]
+set_location_assignment PIN_C20 -to Hex4In[4]
+set_location_assignment PIN_D19 -to Hex4In[5]
+set_location_assignment PIN_E17 -to Hex4In[6]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
