Got comparison working

--- a/Project1/Project1_top.qsf
+++ b/Project1/Project1_top.qsf
@@ -86,37 +86,51 @@ set_location_assignment PIN_B10 -to LEDs[3]
 set_location_assignment PIN_A10 -to LEDs[2]
 set_location_assignment PIN_A9 -to LEDs[1]
 set_location_assignment PIN_A8 -to LEDs[0]
-set_location_assignment PIN_C14 -to Hex1In[0]
-set_location_assignment PIN_C17 -to Hex1In[6]
-set_location_assignment PIN_D17 -to Hex1In[5]
-set_location_assignment PIN_E16 -to Hex1In[4]
-set_location_assignment PIN_C16 -to Hex1In[3]
-set_location_assignment PIN_C15 -to Hex1In[2]
-set_location_assignment PIN_E15 -to Hex1In[1]
-set_location_assignment PIN_C18 -to Hex2In[0]
-set_location_assignment PIN_B17 -to Hex2In[6]
-set_location_assignment PIN_A18 -to Hex2In[5]
-set_location_assignment PIN_A17 -to Hex2In[4]
-set_location_assignment PIN_B16 -to Hex2In[3]
-set_location_assignment PIN_E18 -to Hex2In[2]
-set_location_assignment PIN_D18 -to Hex2In[1]
 set_global_assignment -name VERILOG_FILE Arithmetic.v
 set_global_assignment -name VERILOG_FILE output_files/Logical.v
 set_global_assignment -name VERILOG_FILE Comparison.v
 set_global_assignment -name VERILOG_FILE output_files/Multiplexer.v
 set_location_assignment PIN_P11 -to clock
-set_location_assignment PIN_B20 -to Hex3In[0]
-set_location_assignment PIN_A20 -to Hex3In[1]
-set_location_assignment PIN_B19 -to Hex3In[2]
-set_location_assignment PIN_A21 -to Hex3In[3]
-set_location_assignment PIN_B21 -to Hex3In[4]
-set_location_assignment PIN_C22 -to Hex3In[5]
-set_location_assignment PIN_B22 -to Hex3In[6]
-set_location_assignment PIN_F21 -to Hex4In[0]
-set_location_assignment PIN_E22 -to Hex4In[1]
-set_location_assignment PIN_E21 -to Hex4In[2]
-set_location_assignment PIN_C19 -to Hex4In[3]
-set_location_assignment PIN_C20 -to Hex4In[4]
-set_location_assignment PIN_D19 -to Hex4In[5]
-set_location_assignment PIN_E17 -to Hex4In[6]
+set_location_assignment PIN_C17 -to SS5[6]
+set_location_assignment PIN_D17 -to SS5[5]
+set_location_assignment PIN_E16 -to SS5[4]
+set_location_assignment PIN_C16 -to SS5[3]
+set_location_assignment PIN_C15 -to SS5[2]
+set_location_assignment PIN_E15 -to SS5[1]
+set_location_assignment PIN_C14 -to SS5[0]
+set_location_assignment PIN_C18 -to SS4[0]
+set_location_assignment PIN_D18 -to SS4[1]
+set_location_assignment PIN_B17 -to SS4[6]
+set_location_assignment PIN_A18 -to SS4[5]
+set_location_assignment PIN_A17 -to SS4[4]
+set_location_assignment PIN_B16 -to SS4[3]
+set_location_assignment PIN_E18 -to SS4[2]
+set_location_assignment PIN_B20 -to SS3[6]
+set_location_assignment PIN_A20 -to SS3[5]
+set_location_assignment PIN_B19 -to SS3[4]
+set_location_assignment PIN_A21 -to SS3[3]
+set_location_assignment PIN_B21 -to SS3[2]
+set_location_assignment PIN_C22 -to SS3[1]
+set_location_assignment PIN_B22 -to SS3[0]
+set_location_assignment PIN_E17 -to SS2[6]
+set_location_assignment PIN_D19 -to SS2[5]
+set_location_assignment PIN_C20 -to SS2[4]
+set_location_assignment PIN_C19 -to SS2[3]
+set_location_assignment PIN_E21 -to SS2[2]
+set_location_assignment PIN_E22 -to SS2[1]
+set_location_assignment PIN_F21 -to SS2[0]
+set_location_assignment PIN_N20 -to SS0[6]
+set_location_assignment PIN_N19 -to SS0[5]
+set_location_assignment PIN_M20 -to SS0[4]
+set_location_assignment PIN_N18 -to SS0[3]
+set_location_assignment PIN_L18 -to SS0[2]
+set_location_assignment PIN_K20 -to SS0[1]
+set_location_assignment PIN_J20 -to SS0[0]
+set_location_assignment PIN_F20 -to SS1[6]
+set_location_assignment PIN_F19 -to SS1[5]
+set_location_assignment PIN_H19 -to SS1[4]
+set_location_assignment PIN_J18 -to SS1[3]
+set_location_assignment PIN_E19 -to SS1[2]
+set_location_assignment PIN_E20 -to SS1[1]
+set_location_assignment PIN_F18 -to SS1[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
