--- a/Project1/Project1_top.qsf
+++ b/Project1/Project1_top.qsf
@@ -105,13 +105,13 @@ set_location_assignment PIN_A18 -to SS4[5]
 set_location_assignment PIN_A17 -to SS4[4]
 set_location_assignment PIN_B16 -to SS4[3]
 set_location_assignment PIN_E18 -to SS4[2]
-set_location_assignment PIN_B20 -to SS3[6]
-set_location_assignment PIN_A20 -to SS3[5]
-set_location_assignment PIN_B19 -to SS3[4]
+set_location_assignment PIN_B22 -to SS3[6]
+set_location_assignment PIN_C22 -to SS3[5]
+set_location_assignment PIN_B21 -to SS3[4]
 set_location_assignment PIN_A21 -to SS3[3]
-set_location_assignment PIN_B21 -to SS3[2]
-set_location_assignment PIN_C22 -to SS3[1]
-set_location_assignment PIN_B22 -to SS3[0]
+set_location_assignment PIN_B19 -to SS3[2]
+set_location_assignment PIN_A20 -to SS3[1]
+set_location_assignment PIN_B20 -to SS3[0]
 set_location_assignment PIN_E17 -to SS2[6]
 set_location_assignment PIN_D19 -to SS2[5]
 set_location_assignment PIN_C20 -to SS2[4]
@@ -133,4 +133,8 @@ set_location_assignment PIN_J18 -to SS1[3]
 set_location_assignment PIN_E19 -to SS1[2]
 set_location_assignment PIN_E20 -to SS1[1]
 set_location_assignment PIN_F18 -to SS1[0]
+set_global_assignment -name VERILOG_FILE Clock.v
+set_global_assignment -name VERILOG_FILE Debouncer.v
+set_global_assignment -name VERILOG_FILE Dimmer.v
+set_global_assignment -name VERILOG_FILE Magic.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
