--- a/Project2/Project2_top.qsf
+++ b/Project2/Project2_top.qsf
@@ -119,8 +119,12 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity P
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -entity Project1_top -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -entity Project1_top -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -entity Project1_top -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VERILOG_FILE Project2_top.v
 set_global_assignment -name VERILOG_FILE Debouncer.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VERILOG_FILE SevenSegment.v
+set_global_assignment -name VERILOG_FILE BCD_Counter.v
+set_global_assignment -name VERILOG_FILE Clock_divider.v
+set_global_assignment -name CDF_FILE output_files/Chain1.cdf
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
